--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "phaserdemo",
-  "description": "",
-  "readme": "",
-  "repository": "",
-  "version": "0.0.0",
-  "readme": "",
-  "repository": "",
+  "description": "Getting to know Phaser",
+  "readme": "README.md",
+  "repository": "https://github.com/davidyezsetz/Phaserdemo.git",
+  "version": "0.0.1",
   "dependencies": {},
   
   "devDependencies": {
