--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,7 @@
 {
   "name": "phaserdemo",
   "version": "0.0.0",
-  "authors": [
-    ""
-  ],
   "dependencies": {
-    "phaser-official": "latest"
+    "phaser-official": "2.0.2"
   }
 }
