--- a/package.json
+++ b/package.json
@@ -1,34 +1,23 @@
 {
   "name": "phaserdemo",
-  "description": "Getting to know Phaser",
-  "readme": "README.md",
-  "repository": "https://github.com/davidyezsetz/Phaserdemo.git",
-  "version": "0.0.1",
-  "dependencies": {},
-  
+  "private": true,
   "devDependencies": {
-    "bower": "*",
-    "gulp": "*",
-    "gulp-util": "*",
-    "gulp-clean": "*",
-    "gulp-concat": "*",
-    "gulp-download": "*",
-    "gulp-rename": "*",
-    "gulp-minify-css": "*",
-    "gulp-minify-html": "*",
-    "gulp-processhtml": "*",
-    "gulp-jshint": "*",
-    "gulp-uglify": "*",
-    "gulp-connect": "*",
-    "gulp-watch": "*",
-    "tiny-lr": "*"
+    "grunt": "~0.4.1",
+    "bower": "~0.9.2",
+    "grunt-contrib-connect": "~0.2.0",
+    "grunt-contrib-watch": "~0.4.3",
+    "grunt-contrib-copy": "*",
+    "grunt-open": "~0.2.0",
+    "matchdep": "~0.1.2",
+    "connect-livereload": "~0.1.3",
+    "moment": "~2.0.0",
+    "grunt-html-build": "~0.3.2",
+    "underscore": "*",
+    "underscore.string": "*",
+    "browserify": "~3.38.0",
+    "grunt-browserify": "~1.3.0"
   },
-
-  "scripts": {
-    "post-install": "node ./node_modules/bower/bin/bower install",
-    "start": "node ./node_modules/gulp/bin/gulp.js",
-
-    "build": "node ./node_modules/gulp/bin/gulp.js build",
-    "lint":  "node ./node_modules/gulp/bin/gulp.js lint"
+  "engines": {
+    "node": ">=0.8.0"
   }
 }
